--- a/site/css/style.css
+++ b/site/css/style.css
@@ -32,6 +32,24 @@ article {
     padding: 6px 15px;
     border-bottom: 1px solid rgb(128, 128, 128);
 }
+article:nth-child(even) {
+    background: rgba(14, 49, 14, 0.317);
+
+}
+.new:before {
+    content: 'NEW';
+    color: rgba(199, 214, 203, 0.99);
+    background-color: rgba(24, 64, 46, 0.714);
+    font-size: 30px;
+    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+   
+    border-radius: 50px 5px 50px;
+    border-style:double;
+    border-width: 10px;
+   
+
+}
+
 
 article a {
     color: rgb(31, 52, 52);
@@ -54,7 +72,7 @@ article h2 {
 }
 
 article img {
-    width: 80%;
+    width: 100%;
     height: 300px;
     object-fit:cover;
     
